package baseline;

import java.util.List;

public class ItemShop {
     List<Products> products;        //list of product object
}
