@startuml
'https://plantuml.com/sequence-diagram

class Solution44 {
boolean isFound
String productName
+main(String[])
+productDeserialization(): ItemShop
}

class Products {
-String name
-double price
-int quantity
+getName()
+getPrice()
+getQuantity()
}

class ItemShop{
List<Products> products
}

Solution44 o-- ItemShop
ItemShop o-- Products
@enduml